[package]
name = "plot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plotly = "*"
reqwest = { version = "*", features = ["json"] }
serde = { version = "*", features = ["derive"] }
itertools = "*"
chrono = "*"
wasm-bindgen = "*"
web-sys = { version = "*", features = [
    "Window",
    "Document",
    "Document",
    "HtmlElement",
    "HtmlCollection",
    "console",
    "MediaQueryList",
    "HtmlBodyElement",
] }
js-sys = "*"
getrandom = { version = "*", features = ["js"] }
num-traits = { version = "*", features = ["i128"] }
wasm-bindgen-futures = "*"
polyfit-rs = "*"
console_error_panic_hook = "*"
