[package]
name = "plot"
version = "0.1.0"
edition = "2021"

[dependencies]
plotly = "*"
reqwest = { version = "*", features = ["json"] }
serde = { version = "*", features = ["derive"] }
itertools = "*"
chrono = "*"
wasm-bindgen = "*"
web-sys = { version = "*", features = [
    "Window",
    "Document",
    "Document",
    "HtmlElement",
    "HtmlCollection",
    "console",
    "MediaQueryList",
    "HtmlBodyElement",
] }
js-sys = "*"
getrandom = { version = "*", features = ["js"] }
num-traits = { version = "*", features = ["i128"] }
wasm-bindgen-futures = "*"
console_error_panic_hook = "*"
polyfit-residuals = "*"
ndarray = "*"
